--- a/nx.json
+++ b/nx.json
@@ -17,6 +17,11 @@
   },
   "projects": {
     "prague": { "tags": [] },
-    "prague-e2e": { "tags": [], "implicitDependencies": ["prague"] }
+    "prague-e2e": { "tags": [], "implicitDependencies": ["prague"] },
+    "mammals": { "tags": [] },
+    "birds": { "tags": [] },
+    "fish": { "tags": [] },
+    "opava": { "tags": [] },
+    "opava-e2e": { "tags": [], "implicitDependencies": ["opava"] }
   }
 }
